# directxtex-rs

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.github/workflows/: main_ci.yml  rust.yml
data/: ferris_wheel.hdr  ferris_wheel.tga  source.txt
ffi/: CMakeLists.txt  main.cpp
src/: bitmap_image.rs  blob.rs  constants.rs  dds_metadata.rs  dxgi_format.rs  enums.rs  ffi.rs  free_functions.rs  hresult.rs  image.rs  lib.rs  macros.rs  rect.rs  scratch_image.rs  texture_metadata.rs
