[package]
authors = ["Ryan McKenzie"]
categories = ["api-bindings", "encoding", "multimedia::encoding", "multimedia::images", "rendering::data-formats"]
description = "Unofficial Rust bindings for Microsoft's DirectXTex library"
edition = "2021"
homepage = "https://github.com/Ryan-rsm-McKenzie/directxtex-rs"
include = [
  "external/DirectX-Headers/include/*",
  "external/DirectX-Headers/src/*",
  "external/DirectX-Headers/LICENSE",
  "external/DirectXMath/Inc/*",
  "external/DirectXMath/LICENSE",
  "external/DirectXTex/DirectXTex/*.cpp",
  "external/DirectXTex/DirectXTex/*.h",
  "external/DirectXTex/DirectXTex/*.inl",
  "external/DirectXTex/LICENSE",
  "ffi/include/sal.h",
  "ffi/main.cpp",
  "src/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE",
]
keywords = ["dds", "directx", "image"]
license = "MIT"
name = "directxtex"
readme = "README.md"
repository = "https://github.com/Ryan-rsm-McKenzie/directxtex-rs"
version = "1.1.1"

[dependencies]
bitflags = "2.4.2"

[build-dependencies]
cc = "1.0.83"
